# CHIP-8-Emulator

./: CMakeLists.txt  README.md  main.cpp  platform.cpp  platform.h
